# docker-duplicity

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: package.yml
edge/: Dockerfile  Pipfile
latest/: Dockerfile  Pipfile  pyproject.toml
python2/: Dockerfile  Pipfile  docker-compose.test.yml
stable/: Dockerfile
